// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finalized result, no error 1`] = `
<div
  className="Alert polkadot"
  style={
    Object {
      "backgroundColor": "#e6007a",
      "color": "white",
    }
  }
>
  <p>
    Submission successful.
  </p>
</div>
`;

exports[`Finalized result, no error, custom message 1`] = `
<div
  className="Alert polkadot"
  style={
    Object {
      "backgroundColor": "#e6007a",
      "color": "white",
    }
  }
>
  Success
</div>
`;

exports[`No result, error 1`] = `
<div
  className="Alert danger"
  style={
    Object {
      "backgroundColor": undefined,
      "color": "#e11a25",
    }
  }
>
  <p>
    Submission failed: error
  </p>
</div>
`;

exports[`No result, error, custom message 1`] = `
<div
  className="Alert danger"
  style={
    Object {
      "backgroundColor": undefined,
      "color": "#e11a25",
    }
  }
>
  Error
</div>
`;

exports[`No result, no error 1`] = `
<div
  className="Alert polkadot"
  style={
    Object {
      "backgroundColor": "#e6007a",
      "color": "white",
    }
  }
>
  <p>
    Submitting...
  </p>
</div>
`;

exports[`Non-finalized result, error 1`] = `
<div
  className="Alert danger"
  style={
    Object {
      "backgroundColor": undefined,
      "color": "#e11a25",
    }
  }
>
  <p>
    Submission failed: error
  </p>
</div>
`;

exports[`Non-finalized result, no error 1`] = `
<div
  className="Alert polkadot"
  style={
    Object {
      "backgroundColor": "#e6007a",
      "color": "white",
    }
  }
>
  <div
    className="spinner-border"
  />
  <p>
    Current status: Ready
  </p>
</div>
`;
